<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/steps_rv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp" />

