<resources>
    <string name="add_widget">Add widget</string>
    <string name="app_name">Sweet stories</string>
    <string name="ingredients">Ingredients</string>
    <string name="image_descr">Sweet image</string>
    <string name="no_video">There is no video available</string>
    <string name="quantity">Quantity: </string>
    <string name="select_a_recipe">Select a recipe</string>
    <string name="steps">Steps</string>
    <string name="portions">Portions</string>
</resources>
