<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gr.mobap.sweetstories.ui.activities.DetailsActivity">


    <FrameLayout
        android:id="@+id/recipe_ingredient_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/steps"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:scrollbarSize="2dp"
        android:scrollbarThumbVertical="@color/colorAccent"
        android:scrollbars="vertical">

        <FrameLayout
            android:id="@+id/recipe_steps_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <FrameLayout
        android:id="@+id/details_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
